support rewrite create MV sql
Signed-off-by: zihe.liu <ziheliu1024@gmail.com>